Add 5 mb file upload limit

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=sa
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.password=123456
+spring.servlet.multipart.max-file-size=5MB
+
+
